# doc-updater

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: doc-review.yml  publish.yml
examples/: platform-comparison.md
src/doc_updater/: __init__.py  cli.py  document.py  exceptions.py  frontmatter.py  reviewer.py
src/doc_updater/providers/: __init__.py  base.py  claude.py
tests/: __init__.py  conftest.py  test_document.py  test_frontmatter.py
