[project]
name = "doc-updater"
version = "0.1.0"
description = "Review and update living documents using LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "python-frontmatter>=1.1.0",
    "typer>=0.12.0",
]

[project.scripts]
doc-updater = "doc_updater.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.3",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_updater"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
